Edited wiki page ButtonEvent through web user interface.

--- a/wiki/ButtonEvent.wiki
+++ b/wiki/ButtonEvent.wiki
@@ -1,4 +1,4 @@
-Event handler for buttons (tactile switches) connected to digital ports.
+Event handler for buttons (tactile switches) on digital ports.
 
 = Methods =
 
