--- a/wiki/AnalogEvent.wiki
+++ b/wiki/AnalogEvent.wiki
@@ -20,7 +20,7 @@ Event handler for analog ports that can be used to read potentiometers or others
 
 = Comments =
 
- The *hysteresis* parameter is useful to avoid too many oscillations when reading a value due to some noise. When defined as greater than 0, the onChange event is launched only when the value changes is greater or equal this parameter.
+ The *hysteresis* parameter is useful to avoid too many oscillations when reading a value due to some noise. When defined as greater than 0, the *onChange* event is launched only when the value changes is greater or equal this parameter.
 
  Once the *onChange* occurs, the value must be readed from *!AnalogPortInformation->value*. This value is obtained using *analogRead*() and stay between 0 to 1023 that represents the analog reference of input voltage. Look for more information in the  [http://www.arduino.cc/en/Reference/AnalogRead Arduino Reference page].
 
