Edited wiki page TimedEvent through web user interface.

--- a/wiki/TimedEvent.wiki
+++ b/wiki/TimedEvent.wiki
@@ -35,7 +35,7 @@ Simple time scheduler.
 
 = Events =
 
- * *onDown*: Happens once when the interval elapses.
+ * *onEvent*: Happens once when the interval elapses.
  
 = Example =
 
