--- a/wiki/RTCTimedEvent.wiki
+++ b/wiki/RTCTimedEvent.wiki
@@ -2,11 +2,11 @@ RTC based time scheduler, similar to Unix Cron. It's currently supporting only t
 
 = Properties =
 
-*!RTCTimedEvent.initialCapacity*
+*RTCTimedEvent.initialCapacity*
 
- Define the initial buffer size. It will allocated after first call to *!RTCTimedEvent.addTimer*() and must be at least the size of *!RTCTimerInformation* structure to be used. Any subsequent calls to *!RTCTimedEvent.addTimer*() will use realloc to match the buffer space.
+ Define the initial buffer size. It will allocated after first call to *RTCTimedEvent.addTimer*() and must be at least the size of *RTCTimerInformation* structure to be used. Any subsequent calls to *RTCTimedEvent.addTimer*() will use realloc to match the buffer space.
 
-*!RTCTimedEvent.time*
+*RTCTimedEvent.time*
 
  Structure that storage the RTC data for read and write.
 
@@ -20,7 +20,7 @@ RTC based time scheduler, similar to Unix Cron. It's currently supporting only t
 
 = Methods =
 
-*!RTCTimedEvent.addTimer*(minute, hour, day, month, dayOfWeek, onEvent)
+*RTCTimedEvent.addTimer*(minute, hour, day, month, dayOfWeek, onEvent)
 
  Add a new timer. The event will be thrown when the current time matches all parameters. The wildcard TIMER_ANY may be used for each parameter that must to be ignored.
 
@@ -31,7 +31,7 @@ RTC based time scheduler, similar to Unix Cron. It's currently supporting only t
  * *dayOfWeek*: Day of week from 1 to 7.
  * *onEvent*: Method called on onEvent events.
 
-*!RTCTimedEvent.addTimer*(eventId, minute, hour, day, month, dayOfWeek, onEvent)
+*RTCTimedEvent.addTimer*(eventId, minute, hour, day, month, dayOfWeek, onEvent)
 
  Add a new timer with an associated ID. The event will be thrown when the current time matches all parameters. The wildcard TIMER_ANY may be used for each parameter that must to be ignored.
 
@@ -43,19 +43,19 @@ RTC based time scheduler, similar to Unix Cron. It's currently supporting only t
  * *dayOfWeek*: Day of week from 1 to 7.
  * *onEvent*: Method called on scheduled events.
 
-*!RTCTimedEvent.clear*()
+*RTCTimedEvent.clear*()
 
  Remove all existing escheduled event.
 
-*!RTCTimedEvent.loop*()
+*RTCTimedEvent.loop*()
 
  Event handler process loop. Must be added to main '*loop*()' function.
 
-*!RTCTimedEvent.readRTC*()
+*RTCTimedEvent.readRTC*()
 
- Read date and time from RTC circuit to *!RTCTimedEvent.time*.
+ Read date and time from RTC circuit to *RTCTimedEvent.time*.
 
-*!RTCTimedEvent.writeRTC*()
+*RTCTimedEvent.writeRTC*()
 
  Write date and time from *RTCTimedEvent.time* to RTC circuit.
 
@@ -67,7 +67,7 @@ RTC based time scheduler, similar to Unix Cron. It's currently supporting only t
 
  Native Arduino Wire library is needed for I2C communication. Don't forget to also include Wire.h on top of sketch toguether with RTCTimedEvent.h.
 
- It's a good practice to set the total ammount of memory needed to *!RTCTimedEvent.initialCapacity* before adding any timer. This example show how to allocate an initial buffer space for 5 timers:
+ It's a good practice to set the total ammount of memory needed to *RTCTimedEvent.initialCapacity* before adding any timer. This example show how to allocate an initial buffer space for 5 timers:
 
 {{{
 RTCTimedEvent.initialCapacity = sizeof(RTCTimerInformation)*5;
@@ -150,7 +150,7 @@ void dayCall(RTCTimerInformation* Sender) {
 }}}
 
 It's return that could be observed at Serial Monitor must be:
-
+<pre>
 New minute: 23:59:0  12/31/2010
 New day! New hour! New minute: 0:0:0  1/1/2011
 New minute: 0:1:0  1/1/2011
@@ -161,3 +161,4 @@ New minute: 0:58:0  1/1/2011
 New minute: 0:59:0  1/1/2011
 New hour! New minute: 1:0:0  1/1/2011
 New minute: 1:1:0  1/1/2011
+</pre>
