--- a/wiki/ButtonEvent.wiki
+++ b/wiki/ButtonEvent.wiki
@@ -45,7 +45,7 @@ Event handler for buttons (tactile switches) on digital or analog (in series wit
 
  The *onDouble* event override the second *onDown* when it happen within the period specified in *doubleMillisWait*. The *onUp* event ocurrs normaly when the button is released from double event.
 
- In order to use series of button you need to calculate the correct voltage drop for each button. You may try to use the [http://code.google.com/p/ebl-arduino/wiki/AnalogEvent AnalogEvent] to obtain these values.
+ In order to use series of button you need to calculate the correct voltage drop for each button position. You may also try to use the [http://code.google.com/p/ebl-arduino/wiki/AnalogEvent AnalogEvent] to obtain these values.
 
 = Example =
 
